Fix layout bug - minimal the tile's size to 1/12, menu buttons overflow, set blackground as white

--- a/dashboards-ui/dashboardsui-web/public_html/scss/builder-alta.scss
+++ b/dashboards-ui/dashboardsui-web/public_html/scss/builder-alta.scss
@@ -512,7 +512,10 @@ body, html {
 }
 
 .dbd-pull-right {
-    float: right!important;
+    position: absolute;
+    right: 5px;
+    background-color: #fff;
+    
     button {
         margin-bottom: 0;
     }
